--- a/kley.html
+++ b/kley.html
@@ -12,7 +12,7 @@
     font-family: Arial, Helvetica, sans-serif; padding: 7px;">     
         <tr>
             <td>
-                <img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/8241614608690570.png" alt="Foto Kleyfferson Silva"
+                <img src="url da imagem" alt="Foto Kleyfferson Silva"
                 width="100px" height="auto"></td>
             <td style="padding-left: 11px; color: #2A2B60; font-weight: bold;">Pamela Otéro <br><span style="font-size: 10px; font-weight: bold;">Trainee Digital - BU Farma</span><br>
                 <a href="mailto:kleyffersonsilva@bemol.com.br" style="font-size: 9px; text-decoration: none; color: #6075B7"><span style="text-decoration: none;">e:</span> kleyffersonsilva@bemol.com.br</a>
