--- a/kley.html
+++ b/kley.html
@@ -14,7 +14,7 @@
             <td>
                 <img src="url da imagem" alt="Foto Kleyfferson Silva"
                 width="100px" height="auto"></td>
-            <td style="padding-left: 11px; color: #2A2B60; font-weight: bold;">Pamela Otéro <br><span style="font-size: 10px; font-weight: bold;">Trainee Digital - BU Farma</span><br>
+            <td style="padding-left: 11px; color: #2A2B60; font-weight: bold;">Kleyfferson Silva <br><span style="font-size: 10px; font-weight: bold;">Trainee Digital - BU Farma</span><br>
                 <a href="mailto:kleyffersonsilva@bemol.com.br" style="font-size: 9px; text-decoration: none; color: #6075B7"><span style="text-decoration: none;">e:</span> kleyffersonsilva@bemol.com.br</a>
                <br>
                 <table border="0" cellpadding="0" cellspacing="0" width="170px" align="left" style="padding-top: 10px;">
