--- a/kley.html
+++ b/kley.html
@@ -1,53 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Assinatura de E-mail</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-    <table border="0" cellpadding="0" cellspacing="0" width="50px" 
-    style="background-color: rgb(248, 248, 248); filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.22)); border-radius:20px;
-    font-family: Arial, Helvetica, sans-serif; padding: 7px;">     
-        <tr>
-            <td>
-                <img src="url da imagem" alt="Foto Kleyfferson Silva"
-                width="100px" height="auto"></td>
-            <td style="padding-left: 11px; color: #2A2B60; font-weight: bold;">Kleyfferson Silva <br><span style="font-size: 10px; font-weight: bold;">Trainee Digital - BU Farma</span><br>
-                <a href="mailto:kleyffersonsilva@bemol.com.br" style="font-size: 9px; text-decoration: none; color: #6075B7"><span style="text-decoration: none;">e:</span> kleyffersonsilva@bemol.com.br</a>
-               <br>
-                <table border="0" cellpadding="0" cellspacing="0" width="170px" align="left" style="padding-top: 10px;">
-                    <tr>
-                        <td>
-                            <a href="www.linkedin.com/in/kleyffersonsilva" target="_blank">
-                            <img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/77571614609316430.png" alt="Icon Linkedin" width="23px"> 
-                            </a>
-                        </td>
-                        <td>
-                            <a href="https://github.com/kleyfferson" target="_blank">
-                                <img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/92811614609437736.png" alt="Icon GitHub" width="23px"> 
-                            </a>
-                        </td>
-                        <td>
-                            <a href="https://www.bemolfarma.com.br/" target="_blank">
-                            <img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/33231614610984470.png" alt="Icon Bemol Farma" width="22px" style="border: 1px solid rgb(88, 88, 88); border-radius: 30px;"> 
-                            </a>
-                        </td>
-                        <td>
-                            <a href="https://www.bemol.com.br/" target="_blank">
-                            <img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/20411614610823538.png" alt="Icon Lojas Bemol" width="23px"> 
-                            </a>
-                        </td>
-                        <td>
-                            <a href="https://bemoldigital.com.br/" target="_blank">
-                            <img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/90741614611076900.png" alt="Icon Bemol Digital" width="23px"> 
-                            </a>
-                        </td>
-                    </tr>       
-                </table>
-            </td>
-        </tr>          
+    <table border="0" cellpadding="0" cellspacing="0" width="50px" style="background-color: #f8f8f8; filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.22)); border-radius:20px;
+    font-family: Arial, Helvetica, sans-serif; padding: 7px;">
+        <tbody>
+            <tr>
+                <td><a><img src="https://omdtuo.stripocdn.email/content/guids/CABINET_44dbdcb7c1104b26e8a02c782d53ae06/images/28651614634173549.png" "" alt="Foto Kleyfferson Silva" width="100px" height="auto" style="display: block;"></a></td>
+                <td style="padding-left: 11px; color: #2A2B60; font-weight: bold;">Kleyfferson Silva <br><span style="font-size: 10px; font-weight: bold;">Trainee Digital - BU Farma</span><br><a href="mailto:kleyffersonsilva@bemol.com.br" style="font-size: 9px; text-decoration: none; color: #6075B7"><span style="text-decoration: none;"></span> kleyffersonsilva@bemol.com.br</a><br>
+                    <table border="0" cellpadding="0" cellspacing="0" width="170px" align="left" style="padding-top: 10px;">
+                        <tbody>
+                            <tr>
+                                <td><a href="www.linkedin.com/in/kleyffersonsilva" target="_blank"><img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/77571614609316430.png" alt="Icon Linkedin" width="23px"></a></td>
+                                <td><a href="https://github.com/kleyfferson" target="_blank"><img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/92811614609437736.png" alt="Icon GitHub" width="23px"></a></td>
+                                <td><a href="https://www.bemolfarma.com.br/" target="_blank"><img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/33231614610984470.png" alt="Icon Bemol Farma" width="22px" style="border: 1px solid #585858; border-radius: 30px;"></a></td>
+                                <td><a href="https://www.bemol.com.br/" target="_blank"><img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/20411614610823538.png" alt="Icon Lojas Bemol" width="23px"></a></td>
+                                <td><a href="https://bemoldigital.com.br/" target="_blank"><img src="https://hfsgjl.stripocdn.email/content/guids/CABINET_b3bea67ac38b69cc8f2f84d22b83de88/images/90741614611076900.png" alt="Icon Bemol Digital" width="23px"></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
     </table>
 </body>
+
 </html>
